force-app/main/default/objects/Billing_Assessment__c/fields/Prod_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Prod_Coverage__c</fullName>
    <inlineHelpText>When the CPQ project is implemented in production, will all products be quotable using the CPQ functionality? If not, is it because you anticipate implementing CPQ over time, or because some products will never be covered by CPQ?</inlineHelpText>
    <label>Products to be Covered by CPQ at Go-Live</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Partial (phased implementation)</fullName>
            </value>
            <value>
                <fullName>Partial (some never covered by CPQ)</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>