force-app/main/default/objects/Billing_Assessment__c/fields/Prod_DocUploaded__c.field-meta.xml
<CustomField>
    <fullName>Prod_DocUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check after uploading product documentation: an extract of your Salesforce Product2 object, your Excel quoting tool... Anything that will give a good overview of all of the products you sell, how they are related and how quotes are configured.</inlineHelpText>
    <label>Product Documentation Uploaded</label>
    <type>Checkbox</type>
</CustomField>