force-app/main/default/objects/Billing_Assessment__c/fields/Proration__c.field-meta.xml
<CustomField>
    <fullName>Proration__c</fullName>
    <inlineHelpText>What are your proration rules for mid-term adjustments or adding products on accounts?</inlineHelpText>
    <label>Proration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>