force-app/main/default/objects/Billing_Assessment__c/fields/Quote_to_Cash_Options__c.field-meta.xml
<CustomField>
    <fullName>Quote_to_Cash_Options__c</fullName>
    <label>Quote to Cash Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead to Quote - CPQ</fullName>
            </value>
            <value>
                <fullName>Lead to Order - CPQ</fullName>
            </value>
            <value>
                <fullName>Lead to Invoice - Billing</fullName>
            </value>
            <value>
                <fullName>Lead to Cash w/automated payments</fullName>
            </value>
            <value>
                <fullName>Lead to Collections with A/R</fullName>
            </value>
            <value>
                <fullName>Lead to Rev Rec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>