force-app/main/default/objects/Billing_Assessment__c/fields/Refunds__c.field-meta.xml
<CustomField>
    <fullName>Refunds__c</fullName>
    <inlineHelpText>Are there any approvals required for refund processing?</inlineHelpText>
    <label>Refunds</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>