force-app/main/default/objects/Billing_Assessment__c/fields/Revenue_Finance_Book__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Finance_Book__c</fullName>
    <label>Revenue Finance Book</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>