force-app/main/default/objects/Billing_Assessment__c/fields/Special_Invoice_Groupings__c.field-meta.xml
<CustomField>
    <fullName>Special_Invoice_Groupings__c</fullName>
    <inlineHelpText>Describe complex billing scenarios you may have such as Parent/Child Billing, Split Billing, Reseller Billing</inlineHelpText>
    <label>Special Invoice Groupings</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>