force-app/main/default/objects/Billing_Assessment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>These status values will be used to track progress of this Assessment and may control record types.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Customer Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>