force-app/main/default/objects/Billing_Assessment__c/fields/Tax_Types__c.field-meta.xml
<CustomField>
    <fullName>Tax_Types__c</fullName>
    <inlineHelpText>Sales, Vat, Special/Custom</inlineHelpText>
    <label>Tax Types</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>