force-app/main/default/objects/Billing_Assessment__c/fields/Taxable_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Tax_Exempt__c</fullName>
    <inlineHelpText>How do you identify and manage tax-exempt customers?</inlineHelpText>
    <label>Taxable/Tax-Exempt</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>