force-app/main/default/objects/Billing_Assessment__c/fields/TaxesincludedonQuotes__c.field-meta.xml
<CustomField>
    <fullName>TaxesincludedonQuotes__c</fullName>
    <inlineHelpText>Do taxes need to be included on your output documents?  What taxing application are you currently using?</inlineHelpText>
    <label>Include Taxes on Documents</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>