force-app/main/default/objects/Billing_Assessment__c/fields/Usage_Current_archiving_deleting_process__c.field-meta.xml
<CustomField>
    <fullName>Usage_Current_archiving_deleting_process__c</fullName>
    <label>Current archiving /deleting process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>