force-app/main/default/objects/Billing_Assessment__c/fields/Usage_Desired_Usage_Process_Mediation__c.field-meta.xml
<CustomField>
    <fullName>Usage_Desired_Usage_Process_Mediation__c</fullName>
    <inlineHelpText>What charges would you like to see for your usage mediation process in the future?</inlineHelpText>
    <label>Desired Usage Process/Mediation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>