force-app/main/default/objects/Billing_Assessment__c/fields/Usage_Integration_with_SF__c.field-meta.xml
<CustomField>
    <fullName>Usage_Integration_with_SF__c</fullName>
    <label>Integration with SF?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>