force-app/main/default/objects/Billing_Assessment__c/fields/Usage_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Usage_Pricing__c</fullName>
    <inlineHelpText>How are your usage products priced?</inlineHelpText>
    <label>Pricing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included Usage</fullName>
            </value>
            <value>
                <fullName>Committed Usage</fullName>
            </value>
            <value>
                <fullName>Volume Discounts</fullName>
            </value>
            <value>
                <fullName>Straight Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>