force-app/main/default/objects/Billing_Assessment__c/fields/Usage_Processing__c.field-meta.xml
<CustomField>
    <fullName>Usage_Processing__c</fullName>
    <inlineHelpText>How often do you mediate and rate your product usage?</inlineHelpText>
    <label>Processing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>