force-app/main/default/objects/Billing_Assessment__c/fields/Usage_Summary_detailed_usage_processing__c.field-meta.xml
<CustomField>
    <fullName>Usage_Summary_detailed_usage_processing__c</fullName>
    <label>Summary or detailed usage processing</label>
    <type>TextArea</type>
</CustomField>