force-app/main/default/objects/Billing_Assessment__c/fields/Usage_Volume_per_Month_Load__c.field-meta.xml
<CustomField>
    <fullName>Usage_Volume_per_Month_Load__c</fullName>
    <inlineHelpText>How many transactions occur per month (for all invoices)?</inlineHelpText>
    <label>Usage Volume per Month/Load</label>
    <length>80</length>
    <type>Text</type>
</CustomField>