force-app/main/default/objects/Billing_Assessment__c/fields/Usuage_Current_Usage_Process_Mediation__c.field-meta.xml
<CustomField>
    <fullName>Usuage_Current_Usage_Process_Mediation__c</fullName>
    <inlineHelpText>What is your current solution for gathering and mediating your product usage?</inlineHelpText>
    <label>Current Usage Process/Mediation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>