force-app/main/default/objects/Billing_Assessment__c/fields/Will_Data_Migration_Be_Required__c.field-meta.xml
<CustomField>
    <fullName>Will_Data_Migration_Be_Required__c</fullName>
    <label>Will Data Migration Be Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>