force-app/main/default/objects/Billing_Assessment__c/listViews/My_Billing_Assessment.listView-meta.xml
<ListView>
    <fullName>My_Billing_Assessment</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Billing Assessment</label>
    <language>en_US</language>
</ListView>