force-app/main/default/objects/Billing_Assessment__c/listViews/X2021_Billing_Assessments.listView-meta.xml
<ListView>
    <fullName>X2021_Billing_Assessments</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>2021 Billing Assessments</label>
</ListView>